MySQL -> MongoDB: Refactor Order Service to use Order model directly instead of OrderResponse; update related methods and remove unnecessary DTOs. Enhance ProductService with additional methods for filtering products by brand, store, and status. Improve StoreService by adding banner upload functionality and simplifying address handling. Clean up UserService by removing unused RoleRepository and adjusting role assignment logic.